--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>MobWars</groupId>
     <artifactId>MobWars</artifactId>
-    <version>1.0</version>
-    <packaging></packaging>
+    <version>b1.0.4</version>
+    <packaging>jar</packaging>
     <repositories>
         <repository>
           <id>spigot-repo</id>
