--- a/MobWars/resources/plugin.yml
+++ b/MobWars/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MobWars
 description: The minigame plugin where wars are fought between mobs!
-version: b1.3
+version: 1.5b
 author: NathanApes
 
 main: nathan.apes.mobwars.main.MobWars
