--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: MobWars
 description: The minigame plugin where wars are fought between mobs!
 version: 1.1
 author: NathanApes
+api-version: 1.21
 
 main: nathan.apes.mobwars.main.MobWars
 
